let's create to apis for aour rest service: 1. I want to give a single n
